%% title: ERD 06 - File Storage
%% source: com.softinter.sicapi.entity.su.SuUpload, com.softinter.sicapi.entity.ex.StorageUploadReference
%% note: StorageUploadReference is a plain POJO (no @Entity/@Table) used as an in-memory
%%       transfer object; it has no real database table. It is included here because it
%%       represents the same uploaded-file concept as SuUpload (shares id, uploadGroupId,
%%       fileName, contentType, fileSize, accessUrl, isActive, isStreaming, visibility)
%%       and is used by FileStorageServiceImpl to sync/create SU_UPLOAD rows by matching id.
erDiagram
%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    direction LR

    SU_UPLOAD {
        uuid id
        varchar created_by
        timestamp created_date
        varchar updated_by
        timestamp updated_date
        boolean is_delete
        varchar delete_by
        timestamp delete_date
        int row_version
        uuid bussiness_id
        varchar bucket_name
        varchar object_key
        varchar file_name
        varchar content_type
        bigint file_size
        enum category
        enum visibility
        varchar storage_url
        varchar access_url
        boolean is_streaming
        boolean is_active
        uuid upload_group_id
        timestamp temp_expires_at
        uuid session_id
    }

    STORAGE_UPLOAD_REFERENCE {
        uuid id
        uuid upload_group_id
        varchar file_name
        varchar content_type
        bigint file_size
        varchar access_url
        boolean is_active
        boolean is_streaming
        varchar visibility
        int state
    }

    PM_APPROVAL {
        uuid id
        uuid attachment_id
    }

    SU_CHAT_LOG {
        uuid id
        uuid attachment_id
    }

    SU_CHAT_GROUP_LOG {
        uuid id
        uuid attachment_id
    }

    PM_DOCUMENT_VERSION {
        uuid id
        uuid file_ref_id
    }

    EX_EXAMPLE {
        uuid id
        uuid upload_group_id
    }

    STORAGE_UPLOAD_REFERENCE }o..|| SU_UPLOAD : "syncs to (matched by id, in-memory)"
    PM_APPROVAL     }o--o| SU_UPLOAD : "attaches (attachment_id FK)"
    SU_CHAT_LOG     }o--o| SU_UPLOAD : "attaches (attachment_id FK)"
    SU_CHAT_GROUP_LOG }o--o| SU_UPLOAD : "attaches (attachment_id FK)"
    PM_DOCUMENT_VERSION }o..o| SU_UPLOAD : "references (file_ref_id, no FK constraint)"
    EX_EXAMPLE      }o..o{ SU_UPLOAD : "groups uploads (upload_group_id, logical)"
    EX_EXAMPLE      |o..o{ STORAGE_UPLOAD_REFERENCE : "holds (transient DTO list uploadGroupData)"
